# university-courses

./: LICENSE  README.md
C/: README.md
C/alma/: alma.cbp  alma.depend  alma.txt  main.c
C/vizsga/: main.c  szamsor.txt  vizsga.cbp  vizsga.depend  vizsga.layout
Computer Graphics/: README.md
Computer Graphics/feladat/felevesprojekt/: CMakeLists.txt  README.md
Computer Graphics/feladat/felevesprojekt/include/: app.h  camera.h  scene.h  utils.h
Computer Graphics/feladat/felevesprojekt/src/: app.c  camera.c  main.c  scene.c  texture.c  utils.c
Computer Graphics/gyakorlatok/graf3gy/: CMakeLists.txt  ball.c  callbacks.c  draw.c  game.c  main.c  pad.c
Computer Graphics/gyakorlatok/graf4gy/: CMakeLists.txt  Makefile  ball.c  game.c  main.c  pad.c  players.c  pong.c
Computer Graphics/gyakorlatok/graf4gy/include/: pong.h
Computer Graphics/gyakorlatok/graf5gy/: CMakeLists.txt
Computer Graphics/gyakorlatok/graf5gy/include/: camera.h
Computer Graphics/gyakorlatok/graf5gy/src/: app.c  camera.c  main.c  scene.c  utils.c
Java OOP/: README.md
Java OOP/07_hazifeladat/: .project
Java OOP/2. beszamolo/: .project
Java OOP/ATM program (ellen beolv)/: .project
Java OOP/Bekérések és műveletek/: .project
Java OOP/BeszamoloMinta/: .project
Java OOP/Kivetel-, es fajlkezeles + Comparator/: .project  names.txt  students.txt
OS/: README.md
OS/A6NQW1_0210/: Screenshot.docx
OS/A6NQW1_0224/: main.c
OS/A6NQW1_0310/: A6NQW1gyak1.c  A6NQW1gyak5parent.c  child.c
OS/A6NQW1_0324/: A6NQW1.txt
OS/A6NQW1_0331/: A6NQW1_alarm.c
OS/A6NQW1_0407/: A6NQW1_gyak9_3a.c  A6NQW1_named.c  A6NQW1_unnamed.c
OS/A6NQW1_0421/: shmctl.c  shmop.c
OS/A6NQW1_0428/: semup.c
OS/OSSemTask_A6NQW1/: A6NQW1_feleves_feladat.c
Operating Systems/A6NQW1_0310/: A6NQW1gyak2.c  A6NQW1gyak5child.c  parent.c
Operating Systems/A6NQW1_0324/: A6NQW1_openclose.c
Operating Systems/A6NQW1_0331/: A6NQW1_tobbszignal_kez.c
Operating Systems/A6NQW1_0407/: A6NQW1_gyak9_3b.c  A6NQW1_gyak9_4.c
Operating Systems/A6NQW1_0421/: shmcreate.c
Operating Systems/A6NQW1_0428/: semset.c
Parallel Algorithms/: README.md
Parallel Algorithms/01_hello/: CMakeLists.txt  main.c
Parallel Algorithms/02/: main.c
Parallel Algorithms/felevesfeladat/: README.md
Parallel Algorithms/felevesfeladat/fft_gpu/: CMakeLists.txt  fft.cl  main.c
Parallel Algorithms/parallel/: CMakeLists.txt  main.c
Parallel Programming/: README.md
Parallel Programming/feladat/: README.md
SQL/BTree - HashTable Comparison/: README.md  main.c
SQL/RegEx/: README.md
Web Technologies 1 (HTML-CSS-JS)/: README.md  comparison.html  contact.html  index.html  z4.html
Web Technologies 1 (HTML-CSS-JS)/css/: css.css
Web Technologies 1 (HTML-CSS-JS)/js/: js.js
XML/: README.md
XML/A6NQW1_0907/: index.html
XML/A6NQW1_0914/: A6N1W1_orarend.xml  A6NQW1_konferencia.xml  A6NQW1_mozi_ext.xml  A6NQW1_xmltohtml.html  style.css
XML/A6NQW1_0928/: A6NQW1_orarend.xml
XML/A6NQW1_1005/: BSZK_Dogworld.xml  BSZK_Dogworld.xsd  BSZK_Dogworld1.xsd  BSZK_kurzusfelvetel.xml  BSZK_kurzusfelvetel.xsd  BSZK_orarend.xml  BSZK_orarend.xsd
XML/A6NQW1_1012/: A6NQW1XMLSchema.xsd  XMLA6NQW1.xml
XML/A6NQW1_1116/: orarendA6NQW1.html  orarendA6NQW1.xsl  studentA6NQW1.out.xml  studentA6NQW1.xml  studentA6NQW1.xsl
XML/A6NQW1_1123/: autok1A6NQW1.xsl  autokA6NQW1.xsl  vizsgakA6NQW1.json  vizsgakA6NQW1.xml
XML/A6NQW1_1130/: JSONA6NQW1.xml  XMLToJSONA6NQW1.json  autokA6NQW1.json  autokA6NQW1.xml
XML/XMLTaskA6NQW1/: ERA6NQW1.erdplus  XDMA6NQW1.drawio  XML Jegyzőkönyv.docx  XMLA6NQW1.xml  (+1 more)
(+202 files in other folders)
